# IC

./: README.md
Assignment1/: README.md
Assignment1/examples/: output_bits_file
Assignment1/sndfile-example-src/: wav_dct_codec.cpp  wav_effects.cpp  wav_hist.cpp  wav_quant.cpp
Assignment2/: README.md
Assignment2/opencv-src/: CMakeCache.txt  CMakeLists.txt  GolombCode.h  Makefile  audio_codec.cpp  audio_decoder.cpp  audio_encoder.cpp  cmake_install.cmake  cp_image.cpp  golomb_codec.h  image_decoder.cpp  image_encoder.cpp  test.cpp  wav_quant.h
Assignment3/: IC - Assignment 3.docx
Assignment3/examples/: lusiadas.txt  medium.txt  multilang1-PT-ENG-PT.txt  multilang2-ENG-IT-FR.txt  multilang3-PT-UKR-BUL.txt  multilang4PT-GER-AFR.utf8  multilang5-ESP-CRO.utf8  multilang6-FR-FIN.utf8
Assignment3/examples/AFG/: afghanistan-medium.utf8  afghanistan-medium1.utf8  afghanistan-small.utf8
Assignment3/examples/AFR/: afrikaans-big.utf8  afrikaans-small.utf8
Assignment3/examples/ARA/: arabic-small.utf8
Assignment3/examples/BUL/: bulgarian-small.utf8
Assignment3/examples/CRO/: croatian-big.utf8  croatian-medium.utf8  croatian-small.utf8
Assignment3/examples/DEN/: danish-small.utf8
Assignment3/src/: CMakeLists.txt  Makefile  fcm.cpp  fcm.h  findlang.cpp  lang.cpp  lang.h  locatelang.cpp
sndfile-example-bin/: out  wav_cmp  wav_hist  wav_quant
sndfile-example-src/: BitStream.cpp  BitStream.h  CMakeLists.txt  wav_cmp.cpp  wav_dct_codec.cpp  wav_dct_decoder.cpp  wav_effects.cpp  wav_effects.h  wav_hist.h  wav_quant.cpp  wav_quant.h
(+22 files in other folders)
